# dockerdemo

./: .dockerignore  .gitignore  Dockerfile  README.md  makefile  pyproject.toml  requirements-exported.txt  requirements.txt
artifacts/: model.pth
extension/: argmax.cpp  setup.py
src/: __init__.py  constants.py  model.py  predict.py  server.py  train.py
tests/: test_train.py
